@@ -1,14 +1,27 @@
 package by.mitskevich.servicestation.mapper;
 
+import by.mitskevich.servicestation.dto.CreateUserDTO;
 import by.mitskevich.servicestation.dto.UserDTO;
 import by.mitskevich.servicestation.entity.User;
 import lombok.experimental.UtilityClass;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class UserMapper {
+
+    public User createUserDtoToUser(CreateUserDTO createUserDTO) {
+        return User.builder()
+                .firstName(createUserDTO.getFirstName())
+                .lastName(createUserDTO.getLastName())
+                .login(createUserDTO.getLogin())
+                .password(createUserDTO.getPassword())
+                .email(createUserDTO.getEmail())
+                .phoneNumber(createUserDTO.getPhoneNumber())
+                .build();
+    }
 
     public User userDtoToUser(UserDTO userDTO) {
         return User.builder()
@@ -16,10 +29,8 @@ public class UserMapper {
                 .firstName(userDTO.getFirstName())
                 .lastName(userDTO.getLastName())
                 .login(userDTO.getLogin())
-                .password(userDTO.getPassword())
                 .email(userDTO.getEmail())
                 .phoneNumber(userDTO.getPhoneNumber())
-                .role(RoleMapper.roleDtoToRole(userDTO.getRoleDTO()))
                 .build();
     }
 
@@ -29,10 +40,9 @@ public class UserMapper {
                 .firstName(user.getFirstName())
                 .lastName(user.getLastName())
                 .login(user.getLogin())
-                .password(user.getPassword())
                 .email(user.getEmail())
                 .phoneNumber(user.getPhoneNumber())
-                .roleDTO(RoleMapper.roleToRoleDTO(user.getRole()))
+                .role(RoleMapper.roleToRoleDTO(user.getRole()))
                 .build();
     }
 
@@ -44,11 +54,10 @@ public class UserMapper {
                         .firstName(userDTO.getFirstName())
                         .lastName(userDTO.getLastName())
                         .login(userDTO.getLogin())
-                        .password(userDTO.getPassword())
                         .email(userDTO.getEmail())
                         .phoneNumber(userDTO.getPhoneNumber())
-                        .role(RoleMapper.roleDtoToRole(userDTO.getRoleDTO()))
-                        .build()).toList();
+                        .role(RoleMapper.roleDtoToRole(userDTO.getRole()))
+                        .build()).collect(Collectors.toList());
     }
 
     public List<UserDTO> usersToUsersDTO(List<User> users) {
@@ -59,11 +68,10 @@ public class UserMapper {
                         .firstName(user.getFirstName())
                         .lastName(user.getLastName())
                         .login(user.getLogin())
-                        .password(user.getPassword())
                         .email(user.getEmail())
                         .phoneNumber(user.getPhoneNumber())
-                        .roleDTO(RoleMapper.roleToRoleDTO(user.getRole()))
-                        .build()).toList();
+                        .role(RoleMapper.roleToRoleDTO(user.getRole()))
+                        .build()).collect(Collectors.toList());
     }
 
     public UserDetails mapUserToCustomUser(User user) {
